toolchain/internal/core/analysis/testdata/valid/optional_cycle_map_array.vdl
// @expect-no-errors
// @assert: has-type Node

type Node {
  id string
  parent? Node
  children? Node[]
  metadata? map[Node]
}
