toolchain/internal/core/analysis/testdata/errors/spreads/conflict_via_indirect_spread.vdl
// @expect: E203

type Base {
  id string
}

type Mid {
  ...Base
}

type User {
  ...Mid
  id int
}
